fix(kit): `Carousel` fix scrolling page on mobile devices

--- a/projects/kit/components/carousel/carousel.style.less
+++ b/projects/kit/components/carousel/carousel.style.less
@@ -57,7 +57,7 @@
     display: flex;
     overflow: auto;
     overscroll-behavior-x: none;
-    touch-action: none;
+    touch-action: pan-y;
 
     &::before,
     &::after {
